agrego lista cursos mintic

--- a/index.html
+++ b/index.html
@@ -226,10 +226,18 @@
                                     <div class="info">
                                         <p class="info_title">#MisionTic2022</p>
                                         <p class="info_com">Programming formation</p>
-                                        <p class="info_cont">MisionTic is an strategy of specialiced learning in programming skills 
-                                            aiming to reach young people and citicens in general, its focus is give more job
-                                            oportunities helping the economy's country.
+                                        <p class="info_cont">MisionTic is an strategy of specialiced learning
+                                            in programming skills, its focus is give more job oportunities 
+                                            helping the economy's country.
                                         </p>
+                                        <br>
+                                        <p>Relevant courses taken:</p> 
+                                        <ul>
+                                            <li>Spring</li>
+                                            <li>JPA</li>
+                                            <li>REST-API development</li>
+                                            <li>React</li>
+                                        </ul>
                                     </div>
                                 </li>
                             </ul>
